# CKHooks

./: .gitmodules  CMakeLists.txt  CallbackList.h  FileHook.cpp  HookApi.cpp  HookBlock.cpp  HookLoader.cpp  HookLoader.h  HookManager.cpp  HookManager.h  HookModule.cpp  HookModule.h  Hooks.h  Hooks.h.in  Logger.h  Macros.h  MessageHook.cpp  MessageHook.h  Plugin.cpp  README.md  TestModule.cpp  Utils.cpp  Utils.h  WindowHook.h
src/: CMakeLists.txt  FileHook.cpp  FileHook.h  HookLoader.h  HookManager.h  Logger.cpp  Logger.h  Macros.h  Plugin.rc  Utils.cpp  Utils.h  Version.h.in  WindowHook.cpp  WindowHook.h
test/: CMakeLists.txt  ListBuildingBlocks.cpp  TestModule.cpp
